# sda_manager

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
assets/920/1-99/: 002.pptx  003.pptx  004.pptx  005.pptx  006.pptx  007.pptx  008.pptx  009.pptx  010.pptx  011.pptx  012.pptx  013.pptx  014.pptx  015.pptx  016.pptx  017.pptx  018.pptx  019.pptx  020.pptx  021.pptx  022.pptx  023.pptx  024.pptx  025.pptx  026.pptx  027.pptx  028.pptx  029.pptx  030.pptx  031.pptx  032.pptx  033.pptx  034.pptx  035.pptx  036.pptx  037.pptx  038.pptx  039.pptx  040.pptx  041.pptx  (+58 more)
assets/920/100-199/: 100.pptx  101.pptx  102.pptx  103.pptx  104.pptx  105.pptx  106.pptx  107.pptx  108.pptx  109.pptx  110.pptx  111.pptx  112.pptx  113.pptx  114.pptx  115.pptx  116.pptx  117.pptx  118.pptx  119.pptx  120.pptx  121.pptx  122.pptx  123.pptx  124.pptx  125.pptx  126.pptx  127.pptx  128.pptx  129.pptx  130.pptx  131.pptx  132.pptx  133.pptx  134.pptx  135.pptx  136.pptx  137.pptx  138.pptx  139.pptx  (+59 more)
assets/920/200-299/: 200.pptx  201.pptx  202.pptx  203.pptx  204.pptx  205.pptx  206.pptx  207.pptx  208.pptx  209.pptx  210.pptx  211.pptx  212.pptx  213.pptx  214.pptx  215.pptx  216.pptx  217.pptx  218.pptx  219.pptx  220.pptx  221.pptx  222.pptx  223.pptx  224.pptx  225.pptx  226.pptx  227.pptx  228.pptx  229.pptx  230.pptx  231.pptx  232.pptx  233.pptx  234.pptx  235.pptx  236.pptx  237.pptx  238.pptx  239.pptx  (+60 more)
assets/920/300-399/: 300.pptx  301.pptx  302.pptx  303.pptx  304.pptx  305.pptx  306.pptx  307.pptx  308.pptx  309.pptx  310.pptx  311.pptx  312.pptx  313.pptx  314.pptx  315.pptx  316.pptx  317.pptx  318.pptx  319.pptx  320.pptx  321.pptx  322.pptx  323.pptx  324.pptx  325.pptx  326.pptx  327.pptx  328.pptx  329.pptx  330.pptx  331.pptx  332.pptx  333.pptx  334.pptx  335.pptx  336.pptx  337.pptx  338.pptx  339.pptx  (+60 more)
assets/920/400-499/: 400.pptx  401.pptx  402.pptx  403.pptx  404.pptx  405.pptx  406.pptx  407.pptx  408.pptx  409.pptx  410.pptx  411.pptx  412.pptx  413.pptx  414.pptx  415.pptx  416.pptx  417.pptx  418.pptx  419.pptx  420.pptx  421.pptx  422.pptx  423.pptx  424.pptx  425.pptx  426.pptx  427.pptx  428.pptx  429.pptx  430.pptx  431.pptx  432.pptx  433.pptx  434.pptx  435.pptx  436.pptx  437.pptx  438.pptx  439.pptx  (+60 more)
assets/920/500-599/: 500.pptx  501.pptx  502.pptx  503.pptx  504.pptx  505.pptx  506.pptx  507.pptx  508.pptx  509.pptx  510.pptx  511.pptx  512.pptx  513.pptx  514.pptx  515.pptx  516.pptx  517.pptx  518.pptx  519.pptx  520.pptx  521.pptx  522.pptx  523.pptx  524.pptx  525.pptx  526.pptx  527.pptx  528.pptx  529.pptx  530.pptx  531.pptx  532.pptx  533.pptx  534.pptx  535.pptx  536.pptx  537.pptx  538.pptx  539.pptx  (+60 more)
assets/920/600-699/: 600.pptx  601.pptx  602.pptx  603.pptx  604.pptx  605.pptx  606.pptx  607.pptx  608.pptx  609.pptx  610.pptx  611.pptx  612.pptx  613.pptx  614.pptx  615.pptx  616.pptx  617.pptx  618.pptx  619.pptx  620.pptx  621.pptx  622.pptx  623.pptx  624.pptx  625.pptx  626.pptx  627.pptx  628.pptx  629.pptx  630.pptx  631.pptx  632.pptx  633.pptx  634.pptx  635.pptx  636.pptx  637.pptx  638.pptx  639.pptx  (+61 more)
assets/920/700-799/: 700.pptx  701.pptx  702.pptx  703.pptx  704.pptx  705.pptx  706.pptx  707.pptx  708.pptx  709.pptx  710.pptx  711.pptx  712.pptx  713.pptx  714.pptx  715.pptx  716.pptx  717.pptx  718.pptx  719.pptx  720.pptx  (+79 more)
crates/hymnal-core/: Cargo.toml
crates/hymnal-core/src/: downloader.rs  fold.rs  i18n.rs  index.rs  lib.rs  library.rs  model.rs  pptx.rs  present.rs  refresh.rs  search.rs  sync.rs  theme.rs  update.rs
crates/hymnal-core/tests/: i18n_test.rs  index_test.rs  pptx_test.rs  present_test.rs  refresh_test.rs  search_test.rs  theme_store_test.rs  theme_test.rs  update_test.rs
crates/hymnal-core/tests/fixtures/: 001.pptx  150.pptx
crates/hymnal-gui/: Cargo.toml  build.rs
crates/hymnal-gui/src/: fonts.rs  main.rs  projector.rs
crates/hymnal-gui/ui/: app.slint  projector.slint
(+138 files in other folders)
