[workspace]
resolver = "2"
members = ["crates/hymnal-core", "crates/hymnal-gui"]

[workspace.package]
edition = "2021"
version = "1.0.2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"

# Optimize dependencies even in debug builds. Our own crates still compile
# unoptimized for fast iteration, but heavy deps (nucleo-matcher, zip, slint)
# run at full speed — so `cargo run` (debug) already feels snappy.
[profile.dev.package."*"]
opt-level = 3

# Release: optimize for a fast, small, single binary to distribute.
[profile.release]
lto = "thin"
codegen-units = 1
strip = true
