[package]
name = "hymnal-core"
edition.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
zip = "2"
quick-xml = "0.36"
nucleo-matcher = "0.3"
bincode = "1"
toml = "0.8"
directories = "5"
dirs = "5"
git2 = "0.19"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
