[package]
name = "hymnal-core"
edition.workspace = true
version.workspace = true

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
zip = "2"
quick-xml = "0.36"
nucleo-matcher = "0.3"
bincode = "1"
toml = "0.8"
directories = "5"
# Vendored libgit2 is compiled from source into the binary so released
# executables don't depend on a system libgit2 being installed.
git2 = { version = "0.19", features = ["vendored-libgit2"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
