[package]
name = "hymnal-gui"
edition.workspace = true
version.workspace = true

[[bin]]
name = "hymnal-gui"
path = "src/main.rs"

[dependencies]
hymnal-core = { path = "../hymnal-core" }
slint = "1.8"
open = "5"
anyhow = { workspace = true }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
slint-build = "1.8"
