[package]
name = "hymnal-gui"
edition.workspace = true
version.workspace = true

[[bin]]
name = "hymnal-gui"
path = "src/main.rs"

[dependencies]
hymnal-core = { path = "../hymnal-core" }
slint = "1.8"
display-info = "0.5"
open = "5"
rfd = "0.14"
sys-locale = "0.3"
anyhow = { workspace = true }
log = "0.4"
env_logger = "0.11"
font-kit = { version = "0.14", optional = true }

[features]
default = ["system-fonts"]
system-fonts = ["dep:font-kit"]

[build-dependencies]
slint-build = "1.8"

# Embeds the .exe icon as a Windows resource. Only pulled in when building on
# Windows (the release job builds the Windows binary natively), so it's absent
# on macOS/Linux.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
